modified:   .vscode/launch.json 	modified:   hw1/cs285/infrastructure/rl_trainer.py 	modified:   hw1/cs285/policies/loaded_gaussian_policy.py 	modified:   hw1/cs285/scripts/run_hw1.py

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,12 @@
             "name": "hw1-BC",
             "type": "python",
             "request": "launch",
-            "cwd": "${workspaceFolder}/hw1",
+            "cwd": "${workspaceFolder}/hw1/",
             "program": "${workspaceFolder}/hw1/cs285/scripts/run_hw1.py",
             "args": [
-                "--expert_policy_file", "/hw1/cs285/policies/experts/Ant.pkl", 
+                "--expert_policy_file", "cs285/policies/experts/Ant.pkl", 
                 "--env_name", "Ant-v2", "--exp_name", "bc_ant", "--n_iter", "1",
-                "--expert_data", "/hw1/cs285/expert_data/expert_data_Ant-v2.pkl ",
+                "--expert_data", "cs285/expert_data/expert_data_Ant-v2.pkl ",
                 "--ep_len", "1000", "--eval_batch_size", "5000",
             ],
             "console": "integratedTerminal",
