--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,52 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "hw1-DAgger",
+            "type": "python",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/hw1/",
+            "program": "${workspaceFolder}/hw1/cs285/scripts/run_hw1.py",
+            "args": [
+                "--expert_policy_file",
+                "cs285/policies/experts/Ant.pkl",
+                "--env_name",
+                "Ant-v2",
+                "--exp_name",
+                "dagger_ant",
+                "--n_iter",
+                "1",
+                "--do_dagger",
+                "--expert_data",
+                "cs285/expert_data/expert_data_Ant-v2.pkl",
+                "--ep_len",
+                "1000",
+                "--eval_batch_size",
+                "5000",
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
             "name": "hw1-BC",
             "type": "python",
             "request": "launch",
             "cwd": "${workspaceFolder}/hw1/",
             "program": "${workspaceFolder}/hw1/cs285/scripts/run_hw1.py",
             "args": [
-                "--expert_policy_file", "cs285/policies/experts/Ant.pkl", 
-                "--env_name", "Ant-v2", "--exp_name", "bc_ant", "--n_iter", "1",
-                "--expert_data", "cs285/expert_data/expert_data_Ant-v2.pkl",
-                "--ep_len", "1000", "--eval_batch_size", "5000",
+                "--expert_policy_file",
+                "cs285/policies/experts/Ant.pkl",
+                "--env_name",
+                "Ant-v2",
+                "--exp_name",
+                "bc_ant",
+                "--n_iter",
+                "1",
+                "--expert_data",
+                "cs285/expert_data/expert_data_Ant-v2.pkl",
+                "--ep_len",
+                "1000",
+                "--eval_batch_size",
+                "5000",
             ],
             "console": "integratedTerminal",
             "justMyCode": true
