modified:   .vscode/launch.json 	modified:   hw1/cs285/scripts/run_hw1.py 	modified:   hw2/cs285/scripts/run_hw2.py 	modified:   hw3/cs285/scripts/run_hw3_actor_critic.py 	modified:   hw3/cs285/scripts/run_hw3_dqn.py

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "--env_name", "CartPole-v0", "-n", "100", "-b", "1000", "-dsa", "--exp_name", "q1_sb_no_rtg_dsa"
             ],
             "console": "integratedTerminal",
-            "justMyCode": true
+            "justMyCode": false
         },
         {
             "name": "hw1-DAgger",
